fix(#8177): More Options Menu visible in LHS when resizing from desktop to mobile

--- a/webapp/src/css/inbox.less
+++ b/webapp/src/css/inbox.less
@@ -1740,6 +1740,10 @@ mm-search-bar {
   }
 
   .app-root:not(.show-content) {
+    .more-options-menu-container {
+      display: none;
+    }
+
     .right-pane {
       .fast-action-trigger {
         display: none;
